--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">RandomNumberGenerator</string>
     <string name="action_settings">Settings</string>
     <string name="fab_text">Generate Random Number</string>
+    <string name="banner_text">Please enter the random number range</string>
 </resources>
