--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="prompt_for_min">From: </string>
     <string name="prompt_for_max">To: </string>
     <string name="maximum_hint">100</string>
+    <string name="starting_output">Your number will appear here</string>
 </resources>
