--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <resources>
     <string name="app_name">RandomNumberGenerator</string>
-    <string name="action_settings">Settings</string>
     <string name="fab_text">Generate Random Number</string>
     <string name="banner_text">Please enter the random number range</string>
     <string name="minimum_hint">1</string>
@@ -8,4 +7,8 @@
     <string name="prompt_for_max">To: </string>
     <string name="maximum_hint">100</string>
     <string name="starting_output">Your number will appear here</string>
+    <string name="action_show_history">Show History</string>
+    <string name="action_clear_history">Clear History</string>
+    <string name="action_about">About</string>
+    <string name="about_text">This is Avrohom Tzvi Housman\'s final exam for MCOO255 in Fall 2022</string>
 </resources>
